prometheus-federation/prom-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prom-ingress
  namespace: linkerd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;

spec:
  rules:
  - http:
      paths:
      - path: /federate
        backend:
          serviceName: linkerd-prometheus
          servicePort: 9090
      - path: /graph
        backend:
          serviceName: linkerd-prometheus
          servicePort: 9090
